force-app/main/default/objects/Lead/fields/AtmWithdrawalEnabled__c.field-meta.xml
<CustomField>
    <fullName>AtmWithdrawalEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AtmWithdrawalEnabled</label>
    <type>Checkbox</type>
</CustomField>