force-app/main/default/objects/Lead/fields/ClosureReason__c.field-meta.xml
<CustomField>
    <fullName>ClosureReason__c</fullName>
    <label>ClosureReason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>