force-app/main/default/objects/Lead/fields/Credit_Line__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line__c</fullName>
    <label>Credit Line</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>