force-app/main/default/objects/Lead/fields/CreditLine__c.field-meta.xml
<CustomField>
    <fullName>CreditLine__c</fullName>
    <label>CreditLine</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>