force-app/main/default/objects/Lead/fields/DayswithoutManagement__c.field-meta.xml
<CustomField>
    <fullName>DayswithoutManagement__c</fullName>
    <description>Calculates the total number of calendar days since the lead was created to track aging and trigger auto-disqualification</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since this lead was created</inlineHelpText>
    <label>DayswithoutManagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>