force-app/main/default/objects/Lead/fields/Eligible_Client__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Client__c</fullName>
    <description>Automated lead qualification based on product type, monthly income, and requested credit line</description>
    <formula>OR(
    AND(
        ISPICKVAL(Product__c, &quot;Visa Plata&quot;), 
        Credit_Line__c &lt;= 3000, 
        Monthly_Income__c &gt;= 3500
        
    ),

    AND(
        ISPICKVAL(Product__c, &quot;Visa Oro&quot;),
        Credit_Line__c &lt;= 5000,
        Monthly_Income__c &gt;= 5500
        
    ),

    AND(
        ISPICKVAL(Product__c, &quot;Visa Infinite&quot;),
        Credit_Line__c &lt;= 7000,
        Monthly_Income__c &gt;= 7500
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the lead is eligible for the selected card based on income and credit line requirements</inlineHelpText>
    <label>Eligible Client</label>
    <type>Checkbox</type>
</CustomField>