force-app/main/default/objects/Lead/fields/ExistingAccount__c.field-meta.xml
<CustomField>
    <fullName>ExistingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ExistingAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>