force-app/main/default/objects/Lead/fields/IsEligible__c.field-meta.xml
<CustomField>
    <fullName>IsEligible__c</fullName>
    <description>Automated lead qualification based on product type, monthly income, and requested credit line</description>
    <formula>OR(
    AND(
        ISPICKVAL(Product__c, &quot;Visa Plata&quot;), 
        CreditLine__c &lt;= 3000, 
        MonthlyIncome__c &lt;= 3500,
        MonthlyIncome__c &gt;= 0
    ),

    AND(
        ISPICKVAL(Product__c, &quot;Visa Oro&quot;),
        CreditLine__c &lt;= 5000,
        MonthlyIncome__c &lt;= 5500,
        MonthlyIncome__c &gt; 3500
    ),

    AND(
        ISPICKVAL(Product__c, &quot;Visa Infinite&quot;),
        CreditLine__c &lt;= 7000,
        MonthlyIncome__c &gt;= 7500
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the lead is eligible for the selected card based on income and credit line requirements</inlineHelpText>
    <label>IsEligible</label>
    <type>Checkbox</type>
</CustomField>