force-app/main/default/objects/Lead/fields/MonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncome__c</fullName>
    <label>MonthlyIncome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>