force-app/main/default/objects/Lead/fields/NationalId__c.field-meta.xml
<CustomField>
    <fullName>NationalId__c</fullName>
    <label>NationalId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>