force-app/main/default/objects/Lead/fields/SLADays__c.field-meta.xml
<CustomField>
    <fullName>SLADays__c</fullName>
    <defaultValue>30</defaultValue>
    <label>SLADays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>