force-app/main/default/objects/Lead/recordTypes/Lead_Natural_Person.recordType-meta.xml
<RecordType>
    <fullName>Lead_Natural_Person</fullName>
    <active>true</active>
    <businessProcess>Process Natural Person</businessProcess>
    <label>Lead Natural Person</label>
</RecordType>