force-app/main/default/objects/Lead/validationRules/LEAD001_Email_Or_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LEAD001_Email_Or_Phone_Required</fullName>
    <active>false</active>
    <description>Requires either Email or Phone to be populated for new leads or when either field is changed</description>
    <errorConditionFormula>AND(
   OR(
      ISNEW(),
      ISCHANGED(Email),
      ISCHANGED(Phone)
   ),
   ISBLANK(Email),
   ISBLANK(Phone)
)</errorConditionFormula>
    <errorMessage>Either Email or Phone are required [LEAD001]</errorMessage>
</ValidationRule>