force-app/main/default/objects/Lead/validationRules/VR_Lead_NotEligibleCannotConvert.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_NotEligibleCannotConvert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Converted&quot;),
  NOT(IsEligible__c)
)</errorConditionFormula>
    <errorMessage>Cannot convert a lead flagged as not eligible</errorMessage>
</ValidationRule>