force-app/main/default/objects/Lead/validationRules/VR_Lead_RequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_RequiredFields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Converted&quot;),
  OR(
    ISBLANK(TEXT(Product__c)),
    ISBLANK(CreditLine__c),
    ISBLANK(MonthlyIncome__c),
    NOT(IsEligible__c)
  )
)</errorConditionFormula>
    <errorMessage>Product, CreditLine, MonthlyIncome and IsEligible=True are required to convert</errorMessage>
</ValidationRule>